# founder-mode

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_memo.html
.github/ISSUE_TEMPLATE/: app_experiment.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: build-dd-arbiter-image.yml  ci.yml  dd-arbiter-ci.yml
apps/dd-arbiter/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/dd-arbiter/docs/: development-timeline.md  investment-thesis.md  market-research.md  path-to-profitability.md  technical-architecture.md
apps/dd-arbiter/src/ddarbiter/: __init__.py  cli.py
apps/dd-arbiter/src/ddarbiter/domain/: __init__.py  schema.py
apps/dd-arbiter/src/ddarbiter/graph/: __init__.py  workflow.py
apps/dd-arbiter/src/ddarbiter/services/: __init__.py
apps/dd-arbiter/tests/: __init__.py  test_schema.py
apps/founder-mode/: README.md  pyproject.toml
apps/founder-mode/src/foundermode/api/: cli.py
apps/founder-mode/src/foundermode/domain/: state.py
apps/founder-mode/src/foundermode/evaluation/: evaluators.py
apps/founder-mode/src/foundermode/graph/: workflow.py
apps/founder-mode/src/foundermode/graph/nodes/: critic.py  planner.py  researcher.py  writer.py
apps/founder-mode/src/foundermode/memory/: vector_store.py
apps/founder-mode/src/foundermode/tools/: reporter.py  search.py
apps/founder-mode/tests/: conftest.py  test_domain_state.py  test_e2e_deep_research.py  test_evaluation_structure.py  test_graph_checkpoint.py  test_graph_integration.py  test_graph_state.py  test_graph_wired.py  test_mock_node.py  test_node_critic.py  test_node_planner.py  test_node_researcher.py  test_node_writer.py  test_precommit.py  test_red_team_integration.py  test_search_memory.py  test_search_tool.py  test_structure.py  test_structure_v2.py  test_vector_store.py  test_workflow.py
conductor/: plan.md  product-guidelines.md  product.md  roadmap_review_prompt.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/agentkit_library_build_20251225/: metadata.json  plan.md  spec.md
conductor/archive/app_migration_20251226/: plan.md  spec.md
conductor/archive/config_ci_20251223/: spec.md
conductor/archive/deep_research_scraper_20251225/: plan.md
conductor/archive/devops_docker_hardening_20251225/: metadata.json  plan.md  spec.md
conductor/code_styleguides/: python.md
docs/: README.md  VALUE_PROPOSITION.md  architecture.md  getting-started.md  monorepo-plan.md  testing-strategy.md  user-guide.md  value-proposition.md
docs/diagrams/: README.md  components.puml  state-machine.puml  system-overview.puml  workflow-sequence.puml
libs/agentkit/: README.md  __init__.py  pyproject.toml
libs/agentkit/infra/: config.py  decorators.py  logging.py
libs/agentkit/patterns/: WORKFLOWS.md
libs/agentkit/services/: search.py  vector_store.py
libs/agentkit/src/agentkit/services/: extraction.py  llm.py  vector_store.py
libs/agentkit/src/agentkit/testing/: fixtures.py
libs/agentkit/tests/: test_integration_fixtures.py  test_lazy_loading.py
libs/agentkit/tests/infra/: test_config.py  test_decorators.py  test_logging.py
libs/agentkit/tests/services/: test_extraction.py  test_llm.py  test_search.py  test_vector_store.py
libs/agentkit/tests/testing/: conftest.py  test_fixtures.py
scripts/: adversarial_bench.py  create_benchmark.py  run_evals.py
src/foundermode/: config.py
src/foundermode/api/: cli.py  (+1 more)
tests/: test_api_endpoints.py  test_api_skeleton.py  test_ci_config.py  test_cli.py  test_cli_interactive.py  test_config.py  test_deep_research_integration.py  test_domain_schema.py  test_domain_state.py  test_e2e_deep_research.py  test_e2e_fallback.py  test_graph_checkpoint.py  test_graph_integration.py  test_graph_skeleton.py  test_graph_state.py  test_mock_node.py  test_node_critic.py  test_node_planner.py  test_node_researcher.py  test_node_writer.py  test_precommit.py  test_red_team_integration.py  test_reporter.py  test_scraper.py  test_scraper_v3.py  test_search_memory.py  test_search_tool.py  test_structure.py  test_structure_v2.py  test_uv_setup.py  test_vector_store.py  test_workflow.py
tests/container/: test_integration.py
(+59 files in other folders)
