[project]
name = "dd-arbiter"
version = "0.1.0"
description = "Adversarial multi-model research for investment thesis stress-testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkit",
    "langgraph>=0.2.0",
    "instructor>=1.0.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "pymupdf>=1.23.0",
    "streamlit>=1.30.0",
    "gptcache>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ddarbiter"]

[tool.uv.sources]
agentkit = { workspace = true }

[project.scripts]
ddarbiter = "ddarbiter.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
