[project]
name = "founder-mode"
version = "0.1.0"
description = "An autonomous due diligence agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foundermode"]

[tool.uv.sources]
agentkit = { workspace = true }

[project.scripts]
foundermode = "foundermode.api.cli:app"
