[project]
name = "agentkit"
version = "0.1.0"
description = "A functional toolkit for LangGraph agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infra", "services", "testing"]
